--- a/src/components/Main/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Main/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,3 +1,10 @@
-.descriptionBlock{
-	padding: 10px;
+.descriptionBlock {
+  padding: 10px;
+}
+
+.descriptionBlock img {
+  width: 300px;
+  height: 300px;
+  object-fit: contain;
+
 }
