--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,15 +1,19 @@
 .header {
   grid-area: header;
   background: aqua;
+  display: flex;
+  justify-content: space-between;
 }
 
 .header img {
-  width: 100px;
+  width: auto;
   height: 100%;
 }
 
 .loginBlock {
-  float: right;
+  display: flex;
+  align-items: center;
+  margin-right: 20px;
 }
 
 .loginBlock a {
@@ -19,4 +23,19 @@
 
 .loginBlock a:hover {
   color: #fff;
+}
+
+.header__success {
+  display: flex;
+  align-items: center;
+  padding-right: 20px;
+  height: 100%;
+  width: 230px;
+  justify-content: space-between;
+}
+
+.header__success img {
+  max-height: 60px;
+  width: auto;
+  border-radius: 50%;
 }
