--- a/src/components/Main/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Main/Profile/ProfileInfo/ProfileInfo.module.css
@@ -6,5 +6,14 @@
   width: 300px;
   height: 300px;
   object-fit: contain;
+}
 
+.profileStatus,
+.profileStatus input {
+  font-size: 25px;
+  font-style: italic;
+}
+
+.profileStatus {
+  padding: 20px;
 }
